# rust_crud_api

./: Cargo.toml  README.md  Rocket.toml
src/: lib.rs  main.rs
src/apis/: apis_all.rs  apis_user.rs  mod.rs
src/count/: count.rs  mod.rs  user_biz.rs
src/db/: db.rs
