[package]
name = "rust_crud_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "=0.5.0-rc.3", features = ["secrets", "json"] }
serde = { version = "1.0.175" }
rocket_db_pools = { version = "=0.1.0-rc.3", features = ["sqlx_postgres"] }
sqlx = { version = "0.6.3", features = ["uuid"] }
